# saneql

./: .gitignore  Cargo.toml  README.md
rust/: Cargo.toml
rust/examples/features/: limit.sane
rust/src/: lib.rs  wasm.rs
rust/src/algebra/: mod.rs
rust/src/infra/: mod.rs  schema.rs
rust/src/parser/: ast.rs  lexer.rs
rust/src/semana/: mod.rs
rust/src/sql/: mod.rs  writer.rs
rust/tests/: golden.rs  trino.rs
rust/tests/golden/features/: gensym.sql  isidentical.sql  table.sql
rust/tests/golden/tpch-sqlite/: q1.sql  q11.sql  q13.sql  q14.sql  q17.sql  q20.sql  q21.sql  q22.sql  q5.sql  q8.sql
src/: lib.rs  wasm.rs
src/algebra/: mod.rs
src/infra/: schema.rs
src/parser/: mod.rs  saneql.lalrpop
src/semana/: mod.rs
src/sql/: writer.rs
tests/: tpch.rs  trino.rs
tests/golden/features/: foreigncall.sql  isidentical.sql  limit.sql  table.sql  window.sql
tests/golden/tpch-sqlite/: q1.sql  q10.sql  q12.sql  q14.sql  q15.sql  q16.sql  q18.sql  q19.sql  q2.sql  q22.sql  q3.sql  q4.sql  q5.sql  q6.sql  q7.sql  q8.sql  q9.sql
